# orbit

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
src/: address_utils.cpp  address_utils.h  connection.h  fd.h  main.cpp  proxy.cpp  proxy.h  socket_utils.cpp  socket_utils.h
src/common/: CMakeLists.txt  fd.h  status.h
src/config/: CMakeLists.txt  config.cpp  config.h
src/logging/: CMakeLists.txt  logger.cpp  logger.h
src/net/: CMakeLists.txt  address_format.cpp  address_format.h  dialer.cpp  dialer.h  listener.cpp  listener.h  resolver.cpp  resolver.h  socket_address.h  socket_io.cpp  socket_io.h  socket_options.cpp  socket_options.h
src/proxy/: CMakeLists.txt  config.h  endpoint_context.h  epoll_utils.cpp  epoll_utils.h  forwarding.cpp  forwarding.h  generator.h  pending_data_sender.cpp  pending_data_sender.h  proxy.cpp  proxy.h  send_buffer.cpp  send_buffer.h  send_buffer_factory.cpp  send_buffer_factory.h  send_buffer_options.h  session_pair.cpp  session_pair.h  signal_fd.h  socket_io.cpp  socket_io.h
src/proxy/detail/: active_listener.h  endpoint_context.h  epoll_utils.cpp  epoll_utils.h  forwarding.cpp  forwarding.h  generator.h  pending_connection.h  pending_data_sender.cpp  pending_data_sender.h  reactor_generator.h  reactor_types.h  resolved_upstream.cpp  resolved_upstream.h  send_buffer.cpp  send_buffer.h  send_buffer_factory.cpp  send_buffer_factory.h  send_buffer_options.h  session_pair.cpp  session_pair.h  signal_fd.cpp  signal_fd.h  timer_fd.cpp  timer_fd.h  upstream_dialer.cpp  upstream_dialer.h
src/proxy/detail/dial/: connection_id.h  dial_registration.h
src/proxy/detail/epoll/: epoll_poller.cpp  epoll_poller.h
src/proxy/detail/listener/: listener_registration.h
src/proxy/detail/session/: session_id.h  session_registration.h  session_types.h
src/proxy/detail/shutdown/: shutdown_registration.h
src/proxy/detail/sources/: reactor_sources.cpp  reactor_sources.h  registration.h  source_id.h
src/signal/: CMakeLists.txt  signal_block.cpp  signal_block.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  two_client_forwarding_test.py
tests/net/: CMakeLists.txt  address_format_test.cpp
tests/proxy/: CMakeLists.txt  send_buffer_test.cpp
